# proyecto-escapemet

./: Final_Game.py  Game.py  Normal_Game_NR.py  Normal_Game_R.py  Object.py  Player.py  Room.py  designs_room.py  lives_clues_time.txt  main.py  main_game.py  pyproject.toml  records.txt  users.txt
minigames/: adivinanzas.py  ahorcado.py  cifrado.py  final_game.py  logica.py  logica_booleana.py  memoria.py  numero_entre.py  palabra_mezclada.py  preguntas_matematica.py  preguntas_python.py  quizizz.py  sopa_letras.py
rooms/: biblioteca_room.py  laboratorio_room.py  pasillo_lab.py  plaza_rectorado_room.py  server_room.py
