[tool.poetry]
name = "escapamet-proyecto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
blessed = "^1.18.0"
colored = "^1.4.2"
sympy = "^1.7.1"
terminaltables = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
